--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <html lang="ja">
 <!DOCTYPE html>
+
 <head>
   <meta charset="UTF-8" />
   <title>サンタクロース</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css" >
+  <link rel="stylesheet" href="css/style.css">
   <link href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-      <div class="settings">
-      <form action="#">
-        <p>初期設定</p>
-        <p><label for="child_name">おなまえ</label><input type="text" name="child_name" id="child_name" required></p>
-        <p><label for="message">message</label><input type="text" name="message" id="message" required></p>
-        <button id="fix" type="button">決定</button>
-      </form>
-    </div>
+  <div class="settings">
+    <form action="#">
+      <p>初期設定</p>
+      <p><label for="child_name">おなまえ</label><input type="text" name="child_name" id="child_name" required></p>
+      <p><label for="message">message</label><input type="text" name="message" id="message" required></p>
+      <button id="fix" type="button">決定</button>
+    </form>
+  </div>
 
   <!-- ▼LINE風ここから -->
   <div class="line__container">
@@ -34,10 +35,16 @@
     <!-- ▼会話エリア scrollを外すと高さ固定解除 -->
     <div class="line__contents scroll">
 
-      <!-- 自分の吹き出し -->
-      <div class="line__right">
-        <div class="text">サンタさん、今大丈夫ですか？！プレゼントの件でご相談です。</div>
-        <span class="date">既読<br>22:10</span>
+
+      <!-- 相手の吹き出し -->
+      <div class="line__left">
+        <figure>
+          <img src="images/24526426.jpg" />
+        </figure>
+        <div class="line__left-text">
+          <div class="name">サンタクロース</div>
+          <div class="text">今年はプレゼントは何が欲しいと言っていますか？</div>
+        </div>
       </div>
 
       <!-- 相手の吹き出し -->
@@ -47,38 +54,15 @@
         </figure>
         <div class="line__left-text">
           <div class="name">サンタクロース</div>
-          <div class="text">大丈夫ですよ！今年はプレゼントは何が欲しいと言っていますか？</div>
-        </div>
-      </div>
-
-      <!-- 相手のスタンプ 
-      <div class="line__left">
-        <div class="stamp"><img src="./stamp/33.png" /></div>
-      </div>-->
-
-      <!-- 相手の吹き出し 
-      <div class="line__left">
-        <figure>
-          <img src="24526426.jpg" />
-        </figure>
-        <div class="line__left-text">
-          <div class="name">サンタクロース</div>
           <div class="text">リクエストしてくださいね</div>
         </div>
-      </div>-->
+      </div>
 
       <!-- 自分の吹き出し -->
       <div class="line__right">
         <div class="text">スプラトゥーン3の追加パス？が欲しいみたいです</div>
         <span class="date">既読<br>22:12</span>
       </div>
-
-      <!-- 自分のスタンプ
-      <div class="line__right">
-        <div class="stamp"><img src="./stamp/22.png" /></div>
-        <span class="date">既読<br>0:30</span>
-      </div>
- -->
 
       <!-- 相手の吹き出し -->
       <div class="line__left">
@@ -116,17 +100,29 @@
       </div>
 
       <div class="comment__outer">
-      </div>
-        <div class="comment">
-        今年のプレゼント受付は終了しました。<br>
-        これ以上メッセージは送信できません。
-      </div>
       
+        <div class="comment">
+          今年のプレゼント受付は終了しました。<br>
+          これ以上メッセージは送信できません
+        </div>
+      </div>
+
+
     </div>
-    <!--　▲会話エリア ここまで -->
+      <!--　▲会話エリア ここまで -->
+      <div class="chat__outer">
+        <div class="chat__contents">
+          <span>&lt;&nbsp;</span>
+          <div class="chat__input">
+            <input type="text" name="chat" class="chat" placeholder="メッセージ入力">
+            <button id="chat" type="button"><span><i class="fa-regular fa-face-smile"></i></span></button>
+          </div>
+          <span><i class="fa-solid fa-microphone"></i></span>
+        </div>
+      </div>
   </div>
   <!--　▲LINE風ここまで -->
-<script src="js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
