初期設定のデザイン

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
   <div class="settings">
     <form action="#">
-      <p>初期設定</p>
-      <p><label for="child-name">おなまえ</label><input type="text" name="child-name" id="child-name" required></p>
-      <p><label for="message">message</label><input type="text" name="message" id="message" required></p>
-      <button id="fix-button" type="button">決定</button>
+      <p class="settings__title">初期設定</p>
+      <p><label for="child-name">おなまえ</label><br><input type="text" name="child-name" id="child-name" required></p>
+      <p><label for="message">message</label><br><textarea name="message" id="message" required></textarea></p>
+      <button id="fix-button" type="button" class="button">決定</button>
     </form>
   </div>
 
