色合いとz-index変更

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <!--　▲会話エリア ここまで -->
       <div class="chat__outer">
         <div class="chat__contents">
-          <span>&lt;&nbsp;</span>
+          <span>&gt;</span>
           <div class="chat__input">
             <input type="text" name="chat" class="chat" id="chat" placeholder="メッセージ入力">
             <button id="chat-button" type="button"><span><i class="fa-regular fa-face-smile"></i></span></button>
