高さなど微調整

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
   <div class="settings">
     <form action="#">
-      <p class="settings__title">初期設定</p>
-      <p><label for="child-name">おなまえ</label><br><input type="text" name="child-name" id="child-name" required></p>
-      <p><label for="message">message</label><br><textarea name="message" id="message" required></textarea></p>
+      <p class="settings__title">サンタとLINE<span><i class="fa-solid fa-comment-dots"></i></span></p>
+      <p><label for="child-name">おなまえ</label><br><input type="text" name="child-name" id="child-name" placeholder="〇〇ちゃんと愛称で入力" required></p>
+      <p><label for="message">message</label><br><textarea name="message" id="message"  placeholder="「ならいごとがんばってね」などサンタさんからのセリフを入力" required></textarea></p>
       <button id="fix-button" type="button" class="button">決定</button>
     </form>
   </div>
