--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
   <div class="settings">
     <form action="#">
       <p class="settings__title">サンタとLINE<span><i class="fa-solid fa-comment-dots"></i></span></p>
-      <p><label for="child-name">おなまえ</label><br><input type="text" name="child-name" id="child-name" placeholder="〇〇ちゃんと愛称で入力" required></p>
-      <p><label for="message">message</label><br><textarea name="message" id="message"  placeholder="「ならいごとがんばってね」などサンタさんからのセリフを入力" required></textarea></p>
+      <p><label for="child-name">おなまえ</label><br><input type="text" name="child-name" id="child-name" placeholder="〇〇ちゃんと愛称で入力" required>
+      <div class="error" id="child-name-error"></div>
+      </p>
+      
+      <p><label for="message">message</label><br><textarea name="message" id="message"  placeholder="「ならいごとがんばってね」などサンタさんからのセリフを入力" required></textarea>
+            <div class="error" id="message-error"></div>
+    </p>
       <button id="fix-button" type="button" class="button">決定</button>
     </form>
   </div>
