画面高さの不具合の修正

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <img src="images/24526426.jpg" />
         </figure>
         <div class="line__left-text">
-          <div class="name">サンタクロース</div>
+          <!-- <div class="name">サンタクロース</div> -->
           <div class="text" id="santa-chat"></div>
         </div>
       </div>
