タグの修正

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
   <!-- ▼LINE風ここから -->
   <div class="line__container">
     <!-- タイトル -->
-    <div class="line__title title__box">
+    <header class="line__title title__box">
       &lt;&nbsp;サンタクロース
       <div class="icon__box">
         <i class="fa-solid fa-magnifying-glass"></i>
         <i class="fa-solid fa-phone"></i>
         <i class="fa-solid fa-bars"></i>
       </div>
-    </div>
+    </header>
     <!-- ▼会話エリア scrollを外すと高さ固定解除 -->
-    <div class="line__contents scroll">
+    <main class="line__contents scroll">
       <!-- 相手の吹き出し -->
       <div class="line__left">
         <figure>
@@ -50,7 +50,7 @@
           <div class="text" id="santa-chat"></div>
         </div>
       </div>
-    </div>
+    </main>
     <!--　▲会話エリア ここまで -->
       <div class="chat__outer">
         <div class="chat__contents">
